[package]
name = "aruco"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["com"]

[dependencies.opencv]
version = "0.84.5"
features = ["highgui", "videoio", "objdetect", "aruco_detector", "clang-runtime"]

[dependencies]
com = { path = "com", optional = true }

rppal = { version = "0.14.1", optional = true }
tokio = { version = "1.32.0", features = ["full"] }
#video-rs = { version = "0.4.1", features = ["ndarray"] }
ndarray = "0.15.6"

[features]
default = ["pi"]
pi = ["dep:rppal"]
mavlink = ["dep:com", "pi"]
viz = []