[package]
name = "aruco"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["com"]

[dependencies.opencv]
version = "0.84.5"
features = ["highgui", "videoio", "objdetect", "aruco_detector", "clang-runtime"]

[dependencies]
crc = "3.0.1"
com = { path = "com", optional = true }

rppal = { version = "0.14.1", optional = true }
actix-web = { version = "4.4.0", optional = true }
futures = { version = "0.3.28", optional = true }

env_logger = "0.10.0"
tokio = { version = "1.32.0", features = ["full"] }

async-trait = "0.1.73"
ndarray = "0.15.6"
log = "0.4.20"

[features]
default = ["viz"]
pi = ["dep:rppal"]
mavlink = ["dep:com", "pi"]
stream = ["dep:actix-web", "dep:futures"]
viz = []
